package edu.fiuba.algo3.modelo.cartas;

public class CartaEspecial extends Carta{

    public CartaEspecial(String nombre) {
        super(nombre);
    }
}
