package edu.fiuba.algo3.modelo.secciones.tablero;

import edu.fiuba.algo3.modelo.secciones.TipoDeSeccionInvalidaError;

public class CuerpoACuerpo extends Seccion {
    public CuerpoACuerpo(String claveSeccion) throws TipoDeSeccionInvalidaError {
        super(claveSeccion);
    }
}
