package pkg;

public interface Carta {
    // Stub mínimo para que compile
    String[] dondePuedenSerColocada();
}
